// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays button when no container is available 1`] = `
<div
  className="fill-content container-fluid"
>
  <div
    className="fill-row row"
  >
    <div
      className="full-size col-sm-6"
    >
      <div
        className="code-editor"
      >
        <div
          className="flex-container card"
        >
          <div
            className="card-header"
          >
            <div
              className="g-0 container"
            >
              <div
                className="g-0 row"
              >
                <div
                  className="g-0 col-12"
                >
                  <div
                    className="nav card-header-tabs nav-tabs"
                    id="translation-units"
                    onKeyDown={[Function]}
                  >
                    <div
                      className="nav-item"
                    >
                      <a
                        className="nav-link"
                        data-rr-ui-event-key="Merge"
                        href="#"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        role="button"
                        tabIndex={0}
                      >
                        <svg
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          strokeWidth="0"
                          style={
                            Object {
                              "color": undefined,
                            }
                          }
                          t="1569683404098"
                          version="1.1"
                          viewBox="0 0 1024 1024"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <defs />
                          <path
                            d="M482.2 508.4L331.3 389c-3-2.4-7.3-0.2-7.3 3.6V478H184V184h204v128c0 2.2 1.8 4 4 4h60c2.2 0 4-1.8 4-4V144c0-15.5-12.5-28-28-28H144c-15.5 0-28 12.5-28 28v736c0 15.5 12.5 28 28 28h284c15.5 0 28-12.5 28-28V712c0-2.2-1.8-4-4-4h-60c-2.2 0-4 1.8-4 4v128H184V546h140v85.4c0 3.8 4.4 6 7.3 3.6l150.9-119.4c2.4-1.8 2.4-5.4 0-7.2zM880 116H596c-15.5 0-28 12.5-28 28v168c0 2.2 1.8 4 4 4h60c2.2 0 4-1.8 4-4V184h204v294H700v-85.4c0-3.8-4.3-6-7.3-3.6l-151 119.4c-2.3 1.8-2.3 5.3 0 7.1l151 119.5c2.9 2.3 7.3 0.2 7.3-3.6V546h140v294H636V712c0-2.2-1.8-4-4-4h-60c-2.2 0-4 1.8-4 4v168c0 15.5 12.5 28 28 28h284c15.5 0 28-12.5 28-28V144c0-15.5-12.5-28-28-28z"
                          />
                        </svg>
                      </a>
                    </div>
                    <div
                      className="nav-item"
                    >
                      <a
                        className="out-tab tab-decoration-0 nav-link active"
                        data-rr-ui-event-key="0"
                        href="#"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        role="button"
                        tabIndex={0}
                      >
                        cstdio
                        <button
                          className="close-button"
                          onClick={[Function]}
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            strokeWidth="0"
                            style={
                              Object {
                                "color": undefined,
                              }
                            }
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M0 0h24v24H0z"
                              fill="none"
                            />
                            <path
                              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 000-1.41l-2.34-2.34a.996.996 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                            />
                          </svg>
                        </button>
                        <button
                          className="close-button"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            strokeWidth="0"
                            style={
                              Object {
                                "color": undefined,
                              }
                            }
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M0 0h24v24H0z"
                              fill="none"
                            />
                            <path
                              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                            />
                          </svg>
                        </button>
                      </a>
                    </div>
                    <div
                      className="nav-item"
                    >
                      <a
                        className="out-tab tab-decoration-6 nav-link"
                        data-rr-ui-event-key="1"
                        href="#"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        role="button"
                        tabIndex={0}
                      >
                        iostream
                        <button
                          className="close-button"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            strokeWidth="0"
                            style={
                              Object {
                                "color": undefined,
                              }
                            }
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M0 0h24v24H0z"
                              fill="none"
                            />
                            <path
                              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                            />
                          </svg>
                        </button>
                      </a>
                    </div>
                    <div
                      className="nav-item"
                    >
                      <a
                        className="nav-link"
                        data-rr-ui-event-key="2"
                        href="#"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        role="button"
                        tabIndex={0}
                      >
                        +
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="packed-card card-body"
          >
            <div
              className="flex-container"
            >
              <mock-ResizeDetector
                handleHeight={true}
                handleWidth={true}
                onResize={[Function]}
                refreshMode="debounce"
                refreshRate={100}
                targetRef={
                  Object {
                    "current": null,
                  }
                }
              />
              <mock-MonacoEditor
                editorDidMount={[Function]}
                language="cpp"
                onChange={[Function]}
                options={
                  Object {
                    "selectOnLineNumbers": true,
                  }
                }
                value="#include <cstdio>

int main() {
    puts(\\"Hello World\\");
    return 0;
}
"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="flex-container col-sm-6"
    >
      <div
        className="fill-content"
      >
        <div
          className="fixed-content"
        >
          <div
            className="my-2 card"
          >
            <div
              className="card-body"
            >
              <div
                className="flex-container card"
              >
                <div
                  className="card-header"
                >
                  <div
                    className="g-0 container"
                  >
                    <div
                      className="g-0 row"
                    >
                      <div
                        className="g-0 col-12"
                      >
                        <button
                          className="btn btn-outline-primary"
                          disabled={false}
                          onClick={[Function]}
                          type="button"
                        >
                           
                          <svg
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            strokeWidth="0"
                            style={
                              Object {
                                "color": undefined,
                              }
                            }
                            t="1569683545621"
                            version="1.1"
                            viewBox="0 0 1024 1024"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <defs />
                            <path
                              d="M938.2 508.4L787.3 389c-3-2.4-7.3-0.2-7.3 3.6V478H636V184h204v128c0 2.2 1.8 4 4 4h60c2.2 0 4-1.8 4-4V144c0-15.5-12.5-28-28-28H596c-15.5 0-28 12.5-28 28v736c0 15.5 12.5 28 28 28h284c15.5 0 28-12.5 28-28V712c0-2.2-1.8-4-4-4h-60c-2.2 0-4 1.8-4 4v128H636V546h144v85.4c0 3.8 4.4 6 7.3 3.6l150.9-119.4c2.4-1.8 2.4-5.4 0-7.2zM428 116H144c-15.5 0-28 12.5-28 28v168c0 2.2 1.8 4 4 4h60c2.2 0 4-1.8 4-4V184h204v294H244v-85.4c0-3.8-4.3-6-7.3-3.6l-151 119.4c-2.3 1.8-2.3 5.3 0 7.1l151 119.5c2.9 2.3 7.3 0.2 7.3-3.6V546h144v294H184V712c0-2.2-1.8-4-4-4h-60c-2.2 0-4 1.8-4 4v168c0 15.5 12.5 28 28 28h284c15.5 0 28-12.5 28-28V144c0-15.5-12.5-28-28-28z"
                            />
                          </svg>
                           
                          Configure Separately
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="card-body"
                >
                  <div
                    className="btn-toolbar"
                    role="toolbar"
                  >
                    <button
                      className="btn btn-primary"
                      disabled={false}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 16 16"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M4.406 1.342A5.53 5.53 0 0 1 8 0c2.69 0 4.923 2 5.166 4.579C14.758 4.804 16 6.137 16 7.773 16 9.569 14.502 11 12.687 11H10a.5.5 0 0 1 0-1h2.688C13.979 10 15 8.988 15 7.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 2.825 10.328 1 8 1a4.53 4.53 0 0 0-2.941 1.1c-.757.652-1.153 1.438-1.153 2.055v.448l-.445.049C2.064 4.805 1 5.952 1 7.318 1 8.785 2.23 10 3.781 10H6a.5.5 0 0 1 0 1H3.781C1.708 11 0 9.366 0 7.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383z"
                        />
                        <path
                          d="M7.646 15.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 14.293V5.5a.5.5 0 0 0-1 0v8.793l-2.146-2.147a.5.5 0 0 0-.708.708l3 3z"
                        />
                      </svg>
                       Pull compilers
                    </button>
                  </div>
                </div>
              </div>
              <hr
                className="config-separator"
              />
              <div
                className="g-0 container-fluid"
              >
                <div
                  className="align-items-center gx-2 row row-cols-auto"
                >
                  <div
                    className="col"
                  >
                    <button
                      className="me-2 btn btn-primary"
                      disabled={false}
                      id="Run"
                      onClick={[Function]}
                      type="button"
                    >
                       
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M9 1h6v2H9zM19.03 7.39l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42A8.962 8.962 0 0012 4a9 9 0 00-9 9c0 4.97 4.02 9 9 9a8.994 8.994 0 007.03-14.61zM13 14h-2V8h2v6z"
                        />
                      </svg>
                       Build Time
                    </button>
                  </div>
                  <div
                    className="col"
                  />
                  <div
                    className="ms-auto col"
                  >
                    <button
                      className="me-2 btn btn-outline-dark"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <svg
                        alt="Open in Compiler Explorer"
                        className="line-img"
                        viewBox="0 0 1000 1000"
                        xmlSpace="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <style>
                          .st1{fill:#3c3c3f}
                        </style>
                        <path
                          d="M756.4 658.1c-3.2-5.7-3.2-12.7 0-18.5 3.8-6.9 7.3-13.8 10.6-21.1 2.3-5.2-1.4-11.1-7.2-11.1H697c-6.4 0-12.5 3.2-16 8.6-8.1 12.3-17.5 24.3-28.3 35-40.3 40.3-94 62.5-151 62.5S391 691.3 350.7 651s-62.5-94-62.5-151 22.2-110.7 62.5-151 94-62.5 151-62.5 110.7 22.2 151 62.5c10.7 10.7 20.2 22.7 28.3 35 3.5 5.4 9.5 8.6 16 8.6h62.8c5.7 0 9.5-5.9 7.2-11.1-3.2-7.2-6.8-14.1-10.6-21.1-3.2-5.7-3.1-12.7 0-18.5l21.3-38.6c4.1-7.5 2.8-16.8-3.2-22.8l-53.2-53.2c-6-6-15.4-7.4-22.8-3.2l-38.7 21.4c-5.8 3.2-12.7 3.1-18.5-.1-18.4-10.1-37.9-18.1-58.1-23.9-6.3-1.8-11.3-6.7-13.1-13L557.8 166c-2.4-8.2-9.9-13.9-18.4-13.9h-75.3c-8.5 0-16.1 5.6-18.4 13.9l-12.2 42.3c-1.8 6.3-6.8 11.2-13.1 13-20.2 5.9-39.7 13.9-58.1 24-5.8 3.2-12.7 3.2-18.5.1L305 224.1c-7.5-4.1-16.8-2.8-22.8 3.2L229 280.5c-6 6-7.4 15.4-3.2 22.8l21.4 38.7c3.2 5.8 3.1 12.7-.1 18.5-10.1 18.4-18.1 37.9-23.9 58.1-1.8 6.3-6.7 11.3-13 13.1l-42.3 12.2c-8.2 2.4-13.9 9.9-13.9 18.4v75.3c0 8.5 5.6 16.1 13.9 18.4l42.3 12.2c6.3 1.8 11.2 6.8 13 13.1 5.9 20.2 13.9 39.7 24 58.1 3.2 5.8 3.2 12.7.1 18.5l-21.4 38.7c-4.1 7.5-2.8 16.8 3.2 22.8l53.2 53.2c6 6 15.4 7.4 22.8 3.2l38.7-21.4c5.8-3.2 12.7-3.1 18.5.1 18.4 10.1 37.9 18.1 58.1 23.9 6.3 1.8 11.3 6.7 13.1 13l12.2 42.3c2.4 8.2 9.9 13.9 18.4 13.9h75.3c8.5 0 16.1-5.6 18.4-13.9l12.2-42.3c1.8-6.3 6.8-11.2 13.1-13 20.2-5.9 39.7-13.9 58.1-24 5.8-3.2 12.7-3.2 18.5-.1l38.7 21.4c7.5 4.1 16.8 2.8 22.8-3.2l53.2-53.2c6-6 7.4-15.4 3.2-22.8z"
                          fill="#67c52a"
                          style={
                            Object {
                              "fill": "#67c52a",
                            }
                          }
                          transform="translate(-165.28 -213.17) scale(1.4265)"
                        />
                        <path
                          className="st1"
                          d="M367.803 345.447h368.608v68.472H367.803zM367.803 467.128h304.13V535.6h-304.13zM367.803 588.666h368.608v68.472H367.803z"
                          fill="#3c3c3f"
                        />
                      </svg>
                    </button>
                    <button
                      className="me-2 btn btn-outline-dark"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <img
                        alt="Open in CPP Insights"
                        className="line-img"
                        src="cppinsights.svg"
                      />
                    </button>
                    <button
                      className="me-2 btn btn-outline-dark"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <img
                        alt="Open in Quick Bench"
                        className="line-img"
                        src="qb.svg"
                      />
                    </button>
                  </div>
                </div>
                <div
                  className="gy-0 row"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="watermark"
        >
          <svg
            className="watermark2"
            style={
              Object {
                "fill": "#3A0F9630",
              }
            }
            title="Build Bench"
          >
            bb.svg
          </svg>
        </div>
        <div
          className="fixed-content"
        >
          <div />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`displays id 1`] = `
<div
  className="fill-content container-fluid"
>
  <div
    className="fill-row row"
  >
    <div
      className="full-size col-sm-6"
    >
      <div
        className="code-editor"
      >
        <div
          className="flex-container card"
        >
          <div
            className="card-header"
          >
            <div
              className="g-0 container"
            >
              <div
                className="g-0 row"
              >
                <div
                  className="g-0 col-12"
                >
                  <div
                    className="nav card-header-tabs nav-tabs"
                    id="translation-units"
                    onKeyDown={[Function]}
                  >
                    <div
                      className="nav-item"
                    >
                      <a
                        className="nav-link"
                        data-rr-ui-event-key="Merge"
                        href="#"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        role="button"
                        tabIndex={0}
                      >
                        <svg
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          strokeWidth="0"
                          style={
                            Object {
                              "color": undefined,
                            }
                          }
                          t="1569683404098"
                          version="1.1"
                          viewBox="0 0 1024 1024"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <defs />
                          <path
                            d="M482.2 508.4L331.3 389c-3-2.4-7.3-0.2-7.3 3.6V478H184V184h204v128c0 2.2 1.8 4 4 4h60c2.2 0 4-1.8 4-4V144c0-15.5-12.5-28-28-28H144c-15.5 0-28 12.5-28 28v736c0 15.5 12.5 28 28 28h284c15.5 0 28-12.5 28-28V712c0-2.2-1.8-4-4-4h-60c-2.2 0-4 1.8-4 4v128H184V546h140v85.4c0 3.8 4.4 6 7.3 3.6l150.9-119.4c2.4-1.8 2.4-5.4 0-7.2zM880 116H596c-15.5 0-28 12.5-28 28v168c0 2.2 1.8 4 4 4h60c2.2 0 4-1.8 4-4V184h204v294H700v-85.4c0-3.8-4.3-6-7.3-3.6l-151 119.4c-2.3 1.8-2.3 5.3 0 7.1l151 119.5c2.9 2.3 7.3 0.2 7.3-3.6V546h140v294H636V712c0-2.2-1.8-4-4-4h-60c-2.2 0-4 1.8-4 4v168c0 15.5 12.5 28 28 28h284c15.5 0 28-12.5 28-28V144c0-15.5-12.5-28-28-28z"
                          />
                        </svg>
                      </a>
                    </div>
                    <div
                      className="nav-item"
                    >
                      <a
                        className="out-tab tab-decoration-0 nav-link active"
                        data-rr-ui-event-key="0"
                        href="#"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        role="button"
                        tabIndex={0}
                      >
                        math
                        <button
                          className="close-button"
                          onClick={[Function]}
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            strokeWidth="0"
                            style={
                              Object {
                                "color": undefined,
                              }
                            }
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M0 0h24v24H0z"
                              fill="none"
                            />
                            <path
                              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 000-1.41l-2.34-2.34a.996.996 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                            />
                          </svg>
                        </button>
                        <button
                          className="close-button"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            strokeWidth="0"
                            style={
                              Object {
                                "color": undefined,
                              }
                            }
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M0 0h24v24H0z"
                              fill="none"
                            />
                            <path
                              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                            />
                          </svg>
                        </button>
                      </a>
                    </div>
                    <div
                      className="nav-item"
                    >
                      <a
                        className="out-tab tab-decoration-6 nav-link"
                        data-rr-ui-event-key="1"
                        href="#"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        role="button"
                        tabIndex={0}
                      >
                        nomath
                        <button
                          className="close-button"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            strokeWidth="0"
                            style={
                              Object {
                                "color": undefined,
                              }
                            }
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M0 0h24v24H0z"
                              fill="none"
                            />
                            <path
                              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                            />
                          </svg>
                        </button>
                      </a>
                    </div>
                    <div
                      className="nav-item"
                    >
                      <a
                        className="nav-link"
                        data-rr-ui-event-key="2"
                        href="#"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        role="button"
                        tabIndex={0}
                      >
                        +
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="packed-card card-body"
          >
            <div
              className="flex-container"
            >
              <mock-ResizeDetector
                handleHeight={true}
                handleWidth={true}
                onResize={[Function]}
                refreshMode="debounce"
                refreshRate={100}
                targetRef={
                  Object {
                    "current": null,
                  }
                }
              />
              <mock-MonacoEditor
                editorDidMount={[Function]}
                language="cpp"
                onChange={[Function]}
                options={
                  Object {
                    "selectOnLineNumbers": true,
                  }
                }
                value="int main() {
  return 1 + 2;
}
"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="flex-container col-sm-6"
    >
      <div
        className="fill-content"
      >
        <div
          className="fixed-content"
        >
          <div
            className="my-2 card"
          >
            <div
              className="card-body"
            >
              <div
                className="flex-container card"
              >
                <div
                  className="card-header"
                >
                  <div
                    className="g-0 container"
                  >
                    <div
                      className="g-0 row"
                    >
                      <div
                        className="g-0 col-12"
                      >
                        <button
                          className="btn btn-outline-primary"
                          disabled={false}
                          onClick={[Function]}
                          type="button"
                        >
                           
                          <svg
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            strokeWidth="0"
                            style={
                              Object {
                                "color": undefined,
                              }
                            }
                            t="1569683545621"
                            version="1.1"
                            viewBox="0 0 1024 1024"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <defs />
                            <path
                              d="M938.2 508.4L787.3 389c-3-2.4-7.3-0.2-7.3 3.6V478H636V184h204v128c0 2.2 1.8 4 4 4h60c2.2 0 4-1.8 4-4V144c0-15.5-12.5-28-28-28H596c-15.5 0-28 12.5-28 28v736c0 15.5 12.5 28 28 28h284c15.5 0 28-12.5 28-28V712c0-2.2-1.8-4-4-4h-60c-2.2 0-4 1.8-4 4v128H636V546h144v85.4c0 3.8 4.4 6 7.3 3.6l150.9-119.4c2.4-1.8 2.4-5.4 0-7.2zM428 116H144c-15.5 0-28 12.5-28 28v168c0 2.2 1.8 4 4 4h60c2.2 0 4-1.8 4-4V184h204v294H244v-85.4c0-3.8-4.3-6-7.3-3.6l-151 119.4c-2.3 1.8-2.3 5.3 0 7.1l151 119.5c2.9 2.3 7.3 0.2 7.3-3.6V546h144v294H184V712c0-2.2-1.8-4-4-4h-60c-2.2 0-4 1.8-4 4v168c0 15.5 12.5 28 28 28h284c15.5 0 28-12.5 28-28V144c0-15.5-12.5-28-28-28z"
                            />
                          </svg>
                           
                          Configure Separately
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="card-body"
                >
                  <div
                    className="btn-toolbar"
                    role="toolbar"
                  >
                    <div
                      className="me-2 dropdown"
                    >
                      <button
                        aria-expanded={false}
                        className="dropdown-toggle btn btn-outline-dark"
                        disabled={false}
                        id="compiler"
                        onClick={[Function]}
                        type="button"
                      >
                        compiler = Clang 10.1
                      </button>
                    </div>
                    <div
                      className="me-2 dropdown"
                    >
                      <button
                        aria-expanded={false}
                        className="dropdown-toggle btn btn-outline-dark"
                        disabled={false}
                        id="language"
                        onClick={[Function]}
                        type="button"
                      >
                        std = c++2a
                      </button>
                    </div>
                    <div
                      className="me-2 dropdown"
                    >
                      <button
                        aria-expanded={false}
                        className="dropdown-toggle btn btn-outline-dark"
                        disabled={false}
                        id="optim"
                        onClick={[Function]}
                        type="button"
                      >
                        optim = O3
                      </button>
                    </div>
                    <div
                      className="me-2 dropdown"
                    >
                      <button
                        aria-expanded={false}
                        className="dropdown-toggle btn btn-outline-dark"
                        disabled={false}
                        id="libc"
                        onClick={[Function]}
                        type="button"
                      >
                        STL = libstdc++(GNU)
                      </button>
                    </div>
                    <div
                      className="me-2 dropdown"
                    >
                      <button
                        aria-expanded={false}
                        className="dropdown-toggle btn btn-outline-dark"
                        disabled={true}
                        id="flags"
                        onClick={[Function]}
                        type="button"
                      >
                        <span>
                           Other flags 
                          <span />
                           
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <hr
                className="config-separator"
              />
              <div
                className="g-0 container-fluid"
              >
                <div
                  className="align-items-center gx-2 row row-cols-auto"
                >
                  <div
                    className="col"
                  >
                    <button
                      className="me-2 btn btn-primary"
                      disabled={false}
                      id="Run"
                      onClick={[Function]}
                      type="button"
                    >
                       
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        strokeWidth="0"
                        style={
                          Object {
                            "color": undefined,
                          }
                        }
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="M9 1h6v2H9zM19.03 7.39l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42A8.962 8.962 0 0012 4a9 9 0 00-9 9c0 4.97 4.02 9 9 9a8.994 8.994 0 007.03-14.61zM13 14h-2V8h2v6z"
                        />
                      </svg>
                       Build Time
                    </button>
                  </div>
                  <div
                    className="col"
                  />
                  <div
                    className="ms-auto col"
                  >
                    <button
                      className="me-2 btn btn-outline-dark"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <svg
                        alt="Open in Compiler Explorer"
                        className="line-img"
                        viewBox="0 0 1000 1000"
                        xmlSpace="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <style>
                          .st1{fill:#3c3c3f}
                        </style>
                        <path
                          d="M756.4 658.1c-3.2-5.7-3.2-12.7 0-18.5 3.8-6.9 7.3-13.8 10.6-21.1 2.3-5.2-1.4-11.1-7.2-11.1H697c-6.4 0-12.5 3.2-16 8.6-8.1 12.3-17.5 24.3-28.3 35-40.3 40.3-94 62.5-151 62.5S391 691.3 350.7 651s-62.5-94-62.5-151 22.2-110.7 62.5-151 94-62.5 151-62.5 110.7 22.2 151 62.5c10.7 10.7 20.2 22.7 28.3 35 3.5 5.4 9.5 8.6 16 8.6h62.8c5.7 0 9.5-5.9 7.2-11.1-3.2-7.2-6.8-14.1-10.6-21.1-3.2-5.7-3.1-12.7 0-18.5l21.3-38.6c4.1-7.5 2.8-16.8-3.2-22.8l-53.2-53.2c-6-6-15.4-7.4-22.8-3.2l-38.7 21.4c-5.8 3.2-12.7 3.1-18.5-.1-18.4-10.1-37.9-18.1-58.1-23.9-6.3-1.8-11.3-6.7-13.1-13L557.8 166c-2.4-8.2-9.9-13.9-18.4-13.9h-75.3c-8.5 0-16.1 5.6-18.4 13.9l-12.2 42.3c-1.8 6.3-6.8 11.2-13.1 13-20.2 5.9-39.7 13.9-58.1 24-5.8 3.2-12.7 3.2-18.5.1L305 224.1c-7.5-4.1-16.8-2.8-22.8 3.2L229 280.5c-6 6-7.4 15.4-3.2 22.8l21.4 38.7c3.2 5.8 3.1 12.7-.1 18.5-10.1 18.4-18.1 37.9-23.9 58.1-1.8 6.3-6.7 11.3-13 13.1l-42.3 12.2c-8.2 2.4-13.9 9.9-13.9 18.4v75.3c0 8.5 5.6 16.1 13.9 18.4l42.3 12.2c6.3 1.8 11.2 6.8 13 13.1 5.9 20.2 13.9 39.7 24 58.1 3.2 5.8 3.2 12.7.1 18.5l-21.4 38.7c-4.1 7.5-2.8 16.8 3.2 22.8l53.2 53.2c6 6 15.4 7.4 22.8 3.2l38.7-21.4c5.8-3.2 12.7-3.1 18.5.1 18.4 10.1 37.9 18.1 58.1 23.9 6.3 1.8 11.3 6.7 13.1 13l12.2 42.3c2.4 8.2 9.9 13.9 18.4 13.9h75.3c8.5 0 16.1-5.6 18.4-13.9l12.2-42.3c1.8-6.3 6.8-11.2 13.1-13 20.2-5.9 39.7-13.9 58.1-24 5.8-3.2 12.7-3.2 18.5-.1l38.7 21.4c7.5 4.1 16.8 2.8 22.8-3.2l53.2-53.2c6-6 7.4-15.4 3.2-22.8z"
                          fill="#67c52a"
                          style={
                            Object {
                              "fill": "#67c52a",
                            }
                          }
                          transform="translate(-165.28 -213.17) scale(1.4265)"
                        />
                        <path
                          className="st1"
                          d="M367.803 345.447h368.608v68.472H367.803zM367.803 467.128h304.13V535.6h-304.13zM367.803 588.666h368.608v68.472H367.803z"
                          fill="#3c3c3f"
                        />
                      </svg>
                    </button>
                    <button
                      className="me-2 btn btn-outline-dark"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <img
                        alt="Open in CPP Insights"
                        className="line-img"
                        src="cppinsights.svg"
                      />
                    </button>
                    <button
                      className="me-2 btn btn-outline-dark"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <img
                        alt="Open in Quick Bench"
                        className="line-img"
                        src="qb.svg"
                      />
                    </button>
                  </div>
                </div>
                <div
                  className="gy-0 row"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="nav nav-tabs"
          onKeyDown={[Function]}
          role="tablist"
        >
          <div
            className="nav-item"
          >
            <a
              aria-controls="visualization-tabs-tabpane-charts"
              aria-selected={true}
              className="nav-link active"
              data-rr-ui-event-key="charts"
              href="#"
              id="visualization-tabs-tab-charts"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="tab"
              tabIndex={0}
            >
              Charts
            </a>
          </div>
          <div
            className="nav-item"
          >
            <a
              aria-controls="visualization-tabs-tabpane-includes"
              aria-selected={false}
              className="nav-link"
              data-rr-ui-event-key="includes"
              href="#"
              id="visualization-tabs-tab-includes"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="tab"
              tabIndex={-1}
            >
              Includes
            </a>
          </div>
          <div
            className="nav-item"
          >
            <a
              aria-controls="visualization-tabs-tabpane-asm"
              aria-selected={false}
              className="nav-link"
              data-rr-ui-event-key="asm"
              href="#"
              id="visualization-tabs-tab-asm"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="tab"
              tabIndex={-1}
            >
              Assembly
            </a>
          </div>
          <div
            className="nav-item"
          >
            <a
              aria-controls="visualization-tabs-tabpane-pp"
              aria-selected={false}
              className="nav-link"
              data-rr-ui-event-key="pp"
              href="#"
              id="visualization-tabs-tab-pp"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="tab"
              tabIndex={-1}
            >
              Preprocessed
            </a>
          </div>
        </div>
        <div
          className="fill-content tab-content"
        >
          <div
            aria-labelledby="visualization-tabs-tab-charts"
            className="fade fill-content tab-pane active show"
            id="visualization-tabs-tabpane-charts"
            role="tabpanel"
          >
            <mock-TimeChart
              afterTooltip={true}
              beforeTooltip={true}
              colors={
                Array [
                  Array [
                    "#e3a600",
                    "#13bdff",
                  ],
                  Array [
                    "#ebc14d",
                    "#5ad1ff",
                  ],
                ]
              }
              data={
                Array [
                  Array [
                    0.02400000000000001,
                    0.023000000000000003,
                  ],
                  Array [
                    0.022000000000000002,
                    0.022000000000000002,
                  ],
                ]
              }
              dataLabels={
                Array [
                  "kernel",
                  "user",
                ]
              }
              fill={true}
              id="abcd"
              labels={
                Array [
                  "math",
                  "nomath",
                ]
              }
              less="faster"
              more="slower"
              title={
                Array [
                  "Compilation CPU Time",
                  "Lower is faster",
                ]
              }
              xaxis="xstacks"
              yaxis="ystacks"
            >
              <div
                className="col"
              >
                <select
                  className="pull-right form-select"
                  defaultValue="Time"
                  onChange={[Function]}
                >
                  <option
                    value={0}
                  >
                    Time
                  </option>
                  <option
                    value={1}
                  >
                    Memory
                  </option>
                  <option
                    value={2}
                  >
                    I/O Reads
                  </option>
                </select>
              </div>
            </mock-TimeChart>
          </div>
          <div
            aria-labelledby="visualization-tabs-tab-includes"
            className="fade fill-content tab-pane"
            id="visualization-tabs-tabpane-includes"
            role="tabpanel"
          >
            <div />
          </div>
          <div
            aria-labelledby="visualization-tabs-tab-asm"
            className="fade fill-content tab-pane"
            id="visualization-tabs-tabpane-asm"
            role="tabpanel"
          >
            <div
              className="row"
            >
              <div
                className="col-12"
              >
                <div
                  className="nav nav-tabs"
                  id="bench-asm-selection"
                  onKeyDown={[Function]}
                  role="tablist"
                >
                  <div
                    className="nav-item"
                  >
                    <a
                      aria-controls="output-tabs-tabpane-0"
                      aria-selected={true}
                      className="small-tabs out-tab tab-decoration-0 nav-link active"
                      data-rr-ui-event-key="0"
                      href="#"
                      id="output-tabs-tab-0"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="tab"
                      tabIndex={0}
                    >
                      math
                    </a>
                  </div>
                  <div
                    className="nav-item"
                  >
                    <a
                      aria-controls="output-tabs-tabpane-1"
                      aria-selected={false}
                      className="small-tabs out-tab tab-decoration-6 nav-link"
                      data-rr-ui-event-key="1"
                      href="#"
                      id="output-tabs-tab-1"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="tab"
                      tabIndex={-1}
                    >
                      nomath
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="flex-container"
            >
              <mock-ResizeDetector
                handleHeight={true}
                handleWidth={true}
                onResize={[Function]}
                refreshMode="debounce"
                refreshRate={100}
                targetRef={
                  Object {
                    "current": null,
                  }
                }
              />
              <mock-MonacoEditor
                editorDidMount={[Function]}
                language="asm"
                options={
                  Object {
                    "readOnly": true,
                    "selectOnLineNumbers": true,
                  }
                }
                value="	.text
	.file	\\"math.cpp\\"
	.globl	main                            # -- Begin function main
	.p2align	4, 0x90
	.type	main,@function
main:                                   # @main
	.cfi_startproc
# %bb.0:
	movl	$3, %eax
	retq
.Lfunc_end0:
	.size	main, .Lfunc_end0-main
	.cfi_endproc
                                        # -- End function
	.section	\\".linker-options\\",\\"e\\",@llvm_linker_options
	.ident	\\"clang version 11.0.1 (https://github.com/llvm/llvm-project.git 43ff75f2c3feef64f9d73328230d34dac8832a91)\\"
	.section	\\".note.GNU-stack\\",\\"\\",@progbits
	.addrsig
"
              />
            </div>
          </div>
          <div
            aria-labelledby="visualization-tabs-tab-pp"
            className="fade fill-content tab-pane"
            id="visualization-tabs-tabpane-pp"
            role="tabpanel"
          >
            <div
              className="row"
            >
              <div
                className="col-12"
              >
                <div
                  className="nav nav-tabs"
                  id="bench-asm-selection"
                  onKeyDown={[Function]}
                  role="tablist"
                >
                  <div
                    className="nav-item"
                  >
                    <a
                      aria-controls="output-tabs-tabpane-0"
                      aria-selected={true}
                      className="small-tabs out-tab tab-decoration-0 nav-link active"
                      data-rr-ui-event-key="0"
                      href="#"
                      id="output-tabs-tab-0"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="tab"
                      tabIndex={0}
                    >
                      math
                    </a>
                  </div>
                  <div
                    className="nav-item"
                  >
                    <a
                      aria-controls="output-tabs-tabpane-1"
                      aria-selected={false}
                      className="small-tabs out-tab tab-decoration-6 nav-link"
                      data-rr-ui-event-key="1"
                      href="#"
                      id="output-tabs-tab-1"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="tab"
                      tabIndex={-1}
                    >
                      nomath
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="flex-container"
            >
              <mock-ResizeDetector
                handleHeight={true}
                handleWidth={true}
                onResize={[Function]}
                refreshMode="debounce"
                refreshRate={100}
                targetRef={
                  Object {
                    "current": null,
                  }
                }
              />
              <mock-MonacoEditor
                editorDidMount={[Function]}
                language="cpp"
                options={
                  Object {
                    "readOnly": true,
                    "selectOnLineNumbers": true,
                  }
                }
                value="# 1 \\"math.cpp\\"
# 1 \\"<built-in>\\" 1
# 1 \\"<built-in>\\" 3
# 408 \\"<built-in>\\" 3
# 1 \\"<command line>\\" 1
# 1 \\"<built-in>\\" 2
# 1 \\"math.cpp\\" 2
int main() {
  return 1 + 2;
}
"
              />
            </div>
          </div>
        </div>
        <div
          className="fixed-content"
        >
          <div />
        </div>
      </div>
    </div>
  </div>
</div>
`;
